--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "server for to-do list",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1",
+    "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "shelljs": "^0.8.1",
     "superagent": "^3.8.2"
